[package]
name = "advent_of_code_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
hex = "0.4.3"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
regex = "1.10.2"
